Theme: Style error message. Prevent errorbox from squashing background image

--- a/htdocs/luci-static/commotion/cascade.css
+++ b/htdocs/luci-static/commotion/cascade.css
@@ -915,6 +915,22 @@ text-align:left;
   text-decoration: none;
 }
 
+.alerts, .errorbox, .cbi-section-error {
+  background: #E8FF00;
+  color: black;
+  margin: 5px 0;
+  position: relative;
+  max-width: 100%;
+}
+
+.errorbox {
+  background: #00ffcf url(warning_icon.png) no-repeat 10px center;
+  background-size: 55px 55px;
+  max-width: 455px;
+  margin: 0 auto;
+  padding: 10px 10px 10px 75px;
+  min-height: 50px;
+}
 
 .label {
   background-color: #BFBFBF;
